--- a/Mypractice/app/src/main/res/values/strings.xml
+++ b/Mypractice/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="bc_1"> "경기도 교통정보 센터에 따르면,\n8100 광역버스는, 하루에 \n만 명(10,000)이 넘게 이용합니다.\n\n따라서 8100번 노선을 선택하여, \n많은 사람들과 줄서며 기다리는 시간을\n단축하는데에 효과적일 것이라 예상합니다."</string>
     <string name="bc_2"> "경기도 교통정보 센터에 따르면,\nM4102 광역버스는, 하루에 \n오천 명(5,000)이 넘게 이용하는 버스 노선입니다.\n\n8100번 노선과 많은 경로가 겹치기 때문에\n이를 비교하여 더 나은 경로를 보여 줄수있습니다."</string>
     <string name="egg_theday1">"\n그날까지. Until We Rise Again\n"</string>
-    <string name="egg_theday2">"   마스크, 사회적 거리 두기가\n  필수가 되어버린 우리의 일상.\n  전 세계가 힘들고 어렵지만\n  코로나19 속 답답한 일상에\n  마스크 벗는 그 날을 기다리며\n  코로나19 극복을 위한 응원의 메시지! \n"</string>
-    <string name="egg_story">" \n  코로나로 인한 현재,\n  이앱의 사용자들이\n  최대한 다른 이들과의\n  접촉을 줄이며 일상생활을\n  하시길 바라며 제작했습니다. \n\n  모두들 화이팅!\n"</string>
+    <string name="egg_theday2">"   마스크, 사회적 거리 두기가\n  필수가 되어버린 우리의 일상.\n  전 세계가 힘들고 어렵지만\n  답답한 일상속에서도 \n  마스크 벗는 그 날을 기다리며\n  현 상황의 극복을 위한 응원의 메시지! \n"</string>
+    <string name="egg_story">" \n  사회적 거리두기로 인한 현재,\n  이앱의 사용자들이\n  최대한 다른 이들과의\n  접촉을 줄이며 일상생활을\n  하시길 바라며 제작했습니다. \n\n  모두들 화이팅!\n"</string>
     <string name="name_story">" 'THE FAstest COurse' 의 줄임말입니다!\n 위 앱의 취지는 현재의 대중교통 서비스앱과 비교하여 가장 빠른 길을 알려주고, 사용자들또한 각자의 이상에 가장 빠른 길로 나아가는데 도움이 되었으면 하는 바람으로 선정하였습니다."</string>
 </resources>
